--- a/server/jdnode/http_jdserver.html
+++ b/server/jdnode/http_jdserver.html
@@ -6,7 +6,7 @@
 <button type="button" id="run" onclick="run('cmd')">run</button>
 <button type="button" id="repeat" onclick="repeat()">repeat</button>
 <button type="button" id="cancel" onclick="cancel()">cancel</button>
-<textarea id="out" rows=10 cols=80></textarea><br/>
+<br/><textarea id="out" rows=10 cols=80></textarea><br/>
 
 <hr/>
 <button type="button" onclick="run('r0')">run</button>
