--- a/server/node/server.html
+++ b/server/node/server.html
@@ -1,57 +1,72 @@
 <!DOCTYPE html>
 <html><head></head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<body><div><h2>Jd Interface</h2>
-<button type="button" id="run" onclick="run()">run</button>
-<button type="button" onclick="runnxt()">run nxt</button>
-<button type="button" id="next" onclick="seenxt()">see nxt</button>
-<button type="button" id="next" onclick="see1st()">see 1st</button>
-<button type="button" id="repeat" onclick="repeat()">repeat</button>
-<button type="button" id="cancel" onclick="cancel()">cancel</button></div><br/>
-<input type="text" id="cmd" size="80" value="info summary" onkeydown = "if (event.keyCode == 13) run('cmd')">
-<br/><textarea id="out" rows=10 cols=80></textarea><br/>
-<hr/>
+<body><div><h2>Jd Server Interface</h2>
 <button type="button" id="logon" onclick="logon()">logon</button>
-user: <input type="text" id="usr" value="u" size="6">
-pswd: <input type="text" id="pwd" value="p" size="6">
+user: <input type="text" id="usr" value="user0" size="6">
+pswd: <input type="text" id="pwd" value="user0" size="6">
 <button type="button" id="logout" onclick="logout()">logout</button>
- 
-<hr/>service: <input type="text" id="host" value="s1" size="6">
-<pre>SVCREPORT</pre>
+<hr>
+dan: <input type="text" id="dan" value="all" size="6">
+<hr>
+<button type="button" onclick="run()">run</button>
+<button type="button" onclick="runnxt()">run next example</button>
+<br>
+<input type="text" id="cmd" size="60" value='"info summary"' onkeydown = "if (event.keyCode == 13) run('cmd')">
+<br/><textarea id="out" rows=10 cols=80></textarea><br/>
 </div>
 
 <script>
-var rq;    
-var busy= 0; // prevent new request until previous has completed
-var repflag= 0;
-var repcnt= 0;
 var ix=-1;
 
 let examples = [
-"droptable f",
-"createtable f a int,b int,c byte 3",
- 'insert f # [ "a",2,"b",3,"c","xyz"]',
- 'insert f # [ "a",[2,3],"b",[5,6],"c",["xyz","zzz"]]',
- 'read from f','info summary','info schema',"xdo i.3","xdo i.3 4","xdo +a."];
+'"info summary"',
+'"info schema"',
+'["delete t","a<999"]',
+'["insert t","a",45,"byte","xxx"]',
+'["insert t","a",[6,7,8],"byte",["qwe","rqw","erq"]]',
+'"read from t"'
+];
 
-function runnxt(){seenxt();run();}
-
-function seenxt()
+function runnxt()
 {
   ix+=1;
   if(ix==examples.length) ix=0;
-  byid("cmd").value= examples[ix];
-  idvs("out","");
+  idvs('cmd',examples[ix]);
+  run();
 }
 
-function see1st(){ix=-1;seenxt()}
+function logon(){
+  var cmd= "logon "+idv("usr")+"/"+idv("pwd");
+  getdata('+ "'+cmd+'"');
+}
 
-function run()
-{
+function logout(){getdata(idv("dan")+';"logoff"');}
+
+function run(){
   idvs("out","busy");
-  idvs("cmd",idv("cmd"));
-  ajaxrun("jds="+encode(idv("host")+" "+idv("cmd")));
+  getdata(idv("dan")+' '+idv('cmd'));
 }
+
+async function getdata(p) {
+  const url= location.href;
+  try {
+    const response = await fetch(url, {method: "POST",body: p,});
+    if (!response.ok) {
+      throw new Error(`Response status: ${response.status}`);
+    }
+    const result = await response.json();
+    idvs('out',JSON.stringify(result));
+  } catch (error) {idvs('out',error.message);}
+}
+
+function byid(id){return document.getElementById(id);}
+function idv(id){return byid(id).value;}
+function idvs(id,v){byid(id).value=v;}
+
+/* replaced by getdata
+var rq;    
+var busy= 0; // prevent new request until previous has completed
 
 function ajaxrun(p)
 {
@@ -69,25 +84,16 @@ function ajax()
   {
     busy= 0;
     t= rq.responseText;
-    if(repflag) t= "repeat count:"+repcnt+"\n"+t;
     idvs("out",t);
-    if(repflag) {repcnt+= 1;ajaxrun("jds="+encode(idv("host")+" "+idv("cmd")))};
   }
 }
 
-function logout()
+function run()
 {
-  try{ajaxrun("lgx=")} catch(err) {;};
-  document.cookie = "jds_cookie=0";
-  idvs("out","logout - cookie cleared");
+  idvs("out","busy");
+  idvs("cmd",idv("cmd"));
+  ajaxrun(idv("dan")+';'+idv("cmd"));
 }
-
-function repeat(){repflag= 1;run('cmd');}
-function logon(){ajaxrun("lgn="+encode(idv("usr")+"/"+idv("pwd")));}
-function cancel(){busy= 0;repflag= 0;rq.abort();idvs("out","cancelled");}
-function byid(id){return document.getElementById(id);}
-function idv(id){return byid(id).value;}
-function idvs(id,v){byid(id).value=v;}
-function encode(d){return(encodeURIComponent(d)).replace("/%20/g","+");}
+*/
 </script>
 </body></html>
